LU-8508 nodemap: release nodemap index obj if fail to register

In nodemap_fs_init(), if nm_config_file_register() failed, we
need to release the object returned by nodemap_cache_find_create(),
Otherwise, it will cause ASSERTION( atomic_read(&d->ld_ref) == 0 ).

Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: I04570244bacf820cfa375098431010145cde1df2